--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,14 @@
                                 <i class="align-middle" data-feather="home"></i>
                                 <span class="align-middle">Inicio</span>
                             </a>
+                            {% if app.user %}
+                                <a class="sidebar-link" href="{{ path('app_activity_index') }}">
+                                <i class="align-middle" data-feather="clipboard"></i>
+                                <span class="align-middle">Lista Actividades</span>
+                            </a>
+                            {% else %}
+                            <!-- Si el usuario NO está autenticado que este vacio-->
+                            {% endif %}
                         </li>
                         {# <li class="sidebar-item">
                             <a class="sidebar-link" href="{{ path('app_activity_new') }}">
